--- a/src/styles/usage/module/m-index.scss
+++ b/src/styles/usage/module/m-index.scss
@@ -1,22 +1,24 @@
-
+@import './common';
+@charset "UTF-8";
 
 .m-index{
 	@include flexbox();
-	@include flex-direction(clomn);
-
+	@include flex-direction(column);
 	height:100%;
-
 	header{
 		height : .44rem;
 		background :$base-color;
 		ul{
 		@include flexbox();
 		height:100%;
-		li:first-child;
+		li:first-child,
 		li:last-child{
 			width:.44rem;
 			height:100%;
 			line-height:.44rem;
+			text-align: center;
+	        font-size: .24rem;
+	        color: rgba(255, 255, 255, 0.6);
 		}
 		li:nth-child(2){
 			@include flex();
@@ -29,17 +31,18 @@
 				height:.25rem;
 				text-align:center;
 				color:rgba(255,255,255,0.8);
-				background:rgba(100,217,133,0.6)
+				background:rgba(100,217,133,0.6);
 				&:first-child{
 				border-radius:.1rem 0 0 .1rem;
-				background:#64d985;
+				//background:#64d985;
 				}
 				&:last-child{
 				border-radius:0 .1rem .1rem 0;
-				background:#64d985;
+				//background:#64d985;
 				}
-				&.active{
+				&:active{
 					color:#fff;
+					background: #64d985;
 				}
 			}
 		}
@@ -49,7 +52,6 @@
 	section{
 		@include flex();
 		background : aqua;
-		flex:1;
 		width : 100%;
 	}
 
